# emias_search

./: .gitignore  build_and_push.bat  compose.yml
backend/: Dockerfile  app.py  config.py  pyproject.toml  requirements.txt
backend/db/: __init__.py  engine.py  get_group_doc.py  get_users.py  get_users_search.py
backend/db/models/: __init__.py  pdf_mdoc.py
backend/db/sql_requests/: get_all_users_request  get_all_users_request.sql  get_all_users_search_request  get_all_users_search_request.sql  get_applicants_request  get_applicants_request.sql  get_applicants_search_request  get_applicants_search_request.sql  get_hospitalized_request  get_hospitalized_request.sql  get_hospitalized_search_request  get_hospitalized_search_request.sql  get_users_request  get_users_search_request  migration.sql
backend/models/: __init__.py  pdf_mdoc.py  scanner.py  users.py
backend/routes/: __init__.py  group_doc.py  scans.py  storage.py  users.py
backend/storage/: __init__.py
frontend/: Dockerfile  config.js  index.html  nginx.conf  package-lock.json  package.json
frontend/public/: env.js.template
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/api/: api.js  group_doc.js  login_api.js  scanner_api.js  storage_api.js
frontend/src/components/: BottomMenu.jsx  ChooseDept.jsx  LoginWindow.jsx  ModalChooseScanner.jsx  ModalPreview.jsx  NavBar.jsx  ResultModal.jsx  SearchBar.jsx  UserList.jsx
frontend/src/contexts/: UserContext.jsx
frontend/src/views/: ChooseDeptView.jsx  LoginView.jsx  MainView.jsx
scanner_backend/: app.py  requirements.txt  win_sys.py
